--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
 <script type="text/javascript" src="https://macromedia--full.sandbox.my.site.com/Scheduler/lightning/lightning.out.js"></script>
+<script type="text/javascript">	   
+    let mmLang = "Deutsch";
+    let mmBrand = "HM";
+    let mmType = "";
+    let mmLocation = "";
+    let mmID = "";
+</script>
+<script type="text/javascript">
+    $Lightning.use("c:embeddedFlowApp",
+        function() {
+            $Lightning.createComponent(
+                "c:embeddedFlow",
+                {},
+                "macromediaterminplanner", // the DOM location to insert the component
+                function(component) { // API name of the Flow 
+                    component.startFlow("Outbound_Schedule_New_Appointment");                       
+                }
+            );
+        }, "https://macromedia--full.sandbox.my.site.com/Scheduler"  // Site endpoint
+    );
+</script>
