--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="https://macromedia--full.sandbox.my.site.com/Scheduler/lightning/lightning.out.js"></script>
+<script type="text/javascript" src="https://macromedia--full.sandbox.my.site.com/Scheduler/s/lightning/lightning.out.js"></script>
 <script type="text/javascript">	   
     let mmLang = "Deutsch";
     let mmBrand = "HM";
@@ -17,6 +17,6 @@
                     component.startFlow("Outbound_Schedule_New_Appointment");                       
                 }
             );
-        }, "https://macromedia--full.sandbox.my.site.com/Scheduler"  // Site endpoint
+        }, "https://macromedia--full.sandbox.my.site.com/Scheduler/s/"  // Site endpoint
     );
 </script>
