--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@
     <h2>Learn how to display JavaScript text in the browser</h2>
     <p>Hello World</p>
 </body>
+<script type="text/javascript" src="https://macromedia--full.sandbox.my.site.com/Scheduler/lightning/lightning.out.js"></script>
