--- a/index.html
+++ b/index.html
@@ -4,3 +4,5 @@
     <p>Hello World</p>
 </body>
 <script type="text/javascript" src="https://macromedia--full.sandbox.my.site.com/Scheduler/lightning/lightning.out.js"></script>
+
+<script type="text/javascript" src="test.js"></script>
