--- a/index.html
+++ b/index.html
@@ -6,3 +6,20 @@
 <script type="text/javascript" src="https://macromedia--full.sandbox.my.site.com/Scheduler/lightning/lightning.out.js"></script>
 
 <script type="text/javascript" src="test.js"></script>
+
+<div id="scheduler" class="scheduler w-100 spacer-150">
+	<div class="container">	
+		<div class="row">
+			<div class="col-12 col-md-8">
+				<h2>Scheduler</h2>
+			</div>
+		</div>
+	</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12" class="scheduler-sdp-container">
+                <div id="macromediaterminplanner"></div>
+            </div>
+        </div>
+    </div>
+</div>
