--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                      {},
                      "macromediaterminplanner", // the DOM location to insert the component
                      function(component) { // API name of the Flow 
-               
+                        component.startFlow("Outbound_Schedule_New_Appointment");                       
                      }
                  );
             }, "https://macromedia--full.sandbox.my.site.com/Scheduler/s"  // Site endpoint
