--- a/index.html
+++ b/index.html
@@ -24,15 +24,14 @@
          $Lightning.use("c:embeddedFlowApp",
              function() {
                  $Lightning.createComponent(
-                     "c:embeddedFlow",
+                     "header",
                      {},
                      "macromediaterminplanner", // the DOM location to insert the component
                      function(component) { // API name of the Flow 
                         component.startFlow("Outbound_Schedule_New_Appointment");                       
                      }
                  );
-            }, "https://macromedia--full.sandbox.my.site.com/Scheduler/s"  // Site endpoint
-
+            }, "https://macromedia--full.sandbox.my.site.com/Scheduler/s/"  // Site endpoint
          );
       </script>
       <!-- 4. Define an Element where the Appointment Scheduler should be displayed -->
