--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          $Lightning.use("c:embeddedFlowApp",
              function() {
                  $Lightning.createComponent(
-                     "header",
+                     "c:embeddedFlow",
                      {},
                      "macromediaterminplanner", // the DOM location to insert the component
                      function(component) { // API name of the Flow 
