--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         component.startFlow("Outbound_Schedule_New_Appointment");                       
                      }
                  );
-            }, "https://macromedia--full.sandbox.my.site.com/Scheduler/"  // Site endpoint
+            }, "https://macromedia--full.sandbox.my.site.com/Scheduler"  // Site endpoint
          );
       </script>
       <!-- 4. Define an Element where the Appointment Scheduler should be displayed -->
