--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h2>Inbound Guest Appointment | Lightning Scheduler</h2>
       <!-- 3. Use this Script alongwith other javascript Code -->     
       <script>
-         $Lightning.use("c:embeddedFlowAppModify",
+         $Lightning.use("c:embeddedFlowModifyApp",
              function() {
                  $Lightning.createComponent(
                      "c:embeddedFlowModify",
