--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    </head>
    <body>
       <h1>This is an Integration Test from Salesforce to External Websites</h1>
-      <h2>Inbound Guest Appointment | Lightning Scheduler</h2>
+      <h2>MODIFY Guest Appointment | Lightning Scheduler</h2>
       <!-- 3. Use this Script alongwith other javascript Code -->     
       <script>
          $Lightning.use("c:embeddedFlowModifyApp",
