--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
       <h2>MODIFY Guest Appointment | Lightning Scheduler</h2>
       <!-- 3. Use this Script alongwith other javascript Code -->     
       <script>
-         $Lightning.use("c:embeddedFlowCancelApp",
+         $Lightning.use("c:embeddedFlowApp",
              function() {
                  $Lightning.createComponent(
-                     "c:embeddedFlowCancel",
+                     "c:embeddedFlow",
                      {},
                      "macromediaterminplanner", // the DOM location to insert the component
                      function(component) { // API name of the Flow 
-                        component.startFlow("New_Call_Center_Cancel_Appointment");                       
+                        component.startFlow("Outbound_Schedule_New_Appointment");                       
                      }
                  );
             }, "https://macromedia--full.sandbox.my.site.com/Scheduler"  // Site endpoint
